fix: visibility middle (#832)

--- a/source/sass/partials/_editor.scss
+++ b/source/sass/partials/_editor.scss
@@ -16,7 +16,6 @@
 
     .col {
         display: table-cell;
-        visibility: middle;
         padding: 10px 14px;
         width: 50%;
 
